[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aries-boot"
version = "34.0.0"
description = "Aries-Boot - The Orchestrator & Evolution Engine for Nexus Workers"
readme = "README.md"
authors = [{name = "Kuparchad", email = "kuparchad@example.com"}]
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
requires-python = ">=3.13"

dependencies = [
    "fastapi>=0.110.0",
    "uvicorn>=0.27.0",
    "numpy>=1.26.0",
    "psutil>=5.9.0",
    "redis>=5.0.0",
    "nats-py>=2.5.0",
    "httpx>=0.27.0",
    "cryptography>=42.0.0",
    "pyjwt>=2.8.0",
    "black>=24.0.0",
    "autopep8>=2.0.0",
    "python-multipart>=0.0.9",
    "pydantic>=2.6.0",
    "websockets>=12.0",
    "aiohttp>=3.9.0",
    "sqlalchemy>=2.0.0",
    "asyncpg>=0.29.0",
    "alembic>=1.13.0",
    "torch>=2.0.0",
    "transformers>=4.30.0",
    "sentence-transformers>=2.2.0",
    "langchain>=0.1.8",
    "langgraph>=0.0.20",
    "langchain-community>=0.0.10",
    "langchain-openai>=0.0.6",
    "langchain-anthropic>=0.1.0",
    "langchain-google-genai>=0.0.5",
    "openai>=1.12.0",
    "anthropic>=0.18.0",
    "google-generativeai>=0.3.0",
    "qdrant-client>=1.7.0",
    "weaviate-client>=4.5.0",
    "pinecone-client>=3.0.0",
    "chromadb>=0.4.0",
    "qiskit>=1.0.0",
    "pennylane>=0.35.0",
    "cirq>=1.3.0",
    "qutip>=5.0.0",
    "ray>=2.9.0",
    "dask>=2024.0.0",
    "celery>=5.3.0",
    "opentelemetry-api>=1.22.0",
    "opentelemetry-sdk>=1.22.0",
    "opentelemetry-exporter-otlp>=1.22.0",
    "opentelemetry-instrumentation-fastapi>=0.43b0",
    "opentelemetry-instrumentation-httpx>=0.43b0",
    "prometheus-client>=0.19.0",
    "pytest>=7.0",
    "pytest-asyncio>=0.21.0",
    "isort>=5.13.0",
    "mypy>=1.8.0",
]


# --- Pin torch to the custom index ---
[tool.uv.sources]
torch = { index = "pytorch-cpu" } 

[[tool.uv.index]]
name = "pytorch-cpu"                                  
url = "https://download.pytorch.org/whl/cpu"           
explicit = true                               


[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21.0",
    "isort",
    "mypy",
]

[tool.black]
line-length = 120
target-version = ['py313']

[tool.isort]
profile = "black"
line_length = 120

[tool.mypy]
python_version = "3.13"
ignore_missing_imports = true

[tool.uvicorn]
host = "0.0.0.0"
port = 8080
reload = false
log_level = "info"
