[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aries-boot"
version = "34.0.0"
description = "Aries-Boot - The Orchestrator & Evolution Engine for Nexus Workers"
readme = "README.md"
authors = [{name = "Kuparchad", email = "kuparchad@example.com"}]
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
requires-python = "==3.13.*"  # FIXED: Exact version

dependencies = [
    "numpy",
    "fastapi",
    "httpx",
    "pydantic",
    "python-multipart",
    "python-dotenv",
    "uvicorn",
    "anyio",
    "starlette",
    "h11",
    "httpcore",
    "sniffio",
    "idna",
    "certifi",
    "charset-normalizer",
    "pyyaml",
    "packaging",
    "attrs",
    "typing-extensions",
    "typing-inspection",
    "annotated-types",
    "annotated-doc"
]

[tool.pywrangler]
entry = "src/entry.py"
compatibility_date = "2026-06-22"
compatibility_flags = ["python_workers"]

[tool.pywrangler.assets]
include = [
    "src/*.wasm",
    "src/*.js",
]


# --- Pin torch to the custom index ---
[tool.uv.sources]
torch = { index = "pytorch-cpu" }

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[project.optional-dependencies]
dev = [
    "pywrangler",  # FIXED: Added here
    "pytest>=7.0",
    "pytest-asyncio>=0.21.0",
    "isort>=5.13.0",
    "mypy>=1.8.0",
]

[tool.black]
line-length = 120
target-version = ['py313']

[tool.isort]
profile = "black"
line_length = 120

[tool.mypy]
python_version = "3.13"
ignore_missing_imports = true

[tool.uvicorn]
host = "0.0.0.0"
port = 8080
reload = false
log_level = "info"
